<resources>
    <string name="app_name">Railway</string>
    <string name="tickets_title">Tickets</string>
    <string name="add_ticket_title">Add Ticket</string>
    <string name="settings_title">Settings</string>
    <string name="ticket_list_stations_title">%s - %s</string>
    <string name="add_ticket_menu">Add ticket</string>>
    <string name="settings_menu">Settings</string>>
    <string name="placeholder_source_station">Source</string>>
    <string name="placeholder_destination_station">Destination</string>>
    <string name="departure">Departure</string>>
    <string name="arrival">Arrival</string>>
    <string name="save">Save</string>
    <string name="add_place">Add place</string>
    <string name="seat">Seat</string>
    <string name="carriage">Carriage</string>
    <string name="hyphen">-</string>
    <string name="delete_ticket_title">Delete ticket?</string>
    <string name="delete_ticket_message">Are you sure want to delete ticket?</string>
    <string name="add_notification_button">Add</string>
    <string name="notifications_switch">Notifications</string>
    <string name="at_event_time">At departure time</string>
    <string name="five_minutes">5 minutes before</string>
    <string name="ten_minutes">10 minutes before</string>
    <string name="fifteen_minutes">15 minutes before</string>
    <string name="half_hour">30 minutes before</string>
    <string name="one_hour">1 hour before</string>
    <string name="two_hours">2 hours before</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="fifth">Fifth</string>
    <string name="sixth">Sixth</string>
    <string name="seventh">Seventh</string>
    <string name="eighth">Eighth</string>
    <string name="ninth">Ninth</string>
    <string name="notification_title">Train %s - %s</string>
    <string name="notification_body_seat">%d carriage %s seat</string>
    <string name="now">Now</string>
</resources>
